--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <section id="about">
             <h2>About Me</h2>
-            <img src="/Images/WhatsApp Image 2024-03-23 at 16.28.53_32c3e5ef.jpg" alt="My Photo" class="profile-photo">
+            <img src="Images/WhatsApp Image 2024-03-23 at 16.28.53_32c3e5ef.jpg" alt="My Photo" class="profile-photo">
             <p>I am a second-year student at the Faculty of Computers and Artificial Intelligence, Benha University. I have experience with C++, HTML, and CSS, and I actively practice problem-solving. I also participated in the Egyptian Collegiate Programming Contest (ECPC), where I further developed my coding and algorithmic skills.</p>
         </section>
         
@@ -36,13 +36,13 @@
             <h2>Projects</h2>
             <div class="project-grid">
                 <div class="project">
-                    <img src="/Images/Screenshot-2024-01-25-125829.jpg" alt="Project 1" class="project-image">
+                    <img src="Images/Screenshot-2024-01-25-125829.jpg" alt="Project 1" class="project-image">
                     <h3>Weather Forecast Application</h3>
                     <p>This web application fetches real-time weather data for any location using an API. The app displays the current temperature, humidity, wind speed, and a five-day forecast. It also has a sleek user interface, featuring weather icons and dynamic background changes based on the weather condition.</p>
                     <a href="#" class="btn" target="_blank">View Project</a>
                 </div>
                 <div class="project">
-                    <img src="/Images/054YhGcdSr0FkY8pIDnot1L-11.webp" alt="Project 2" class="project-image">
+                    <img src="Images/054YhGcdSr0FkY8pIDnot1L-11.webp" alt="Project 2" class="project-image">
                     <h3>Task Management Application</h3>
                     <p>This project is a web-based task management application designed to help users organize their daily tasks. The application allows users to add, edit, and delete tasks, mark tasks as completed, and categorize them into different projects. The UI is minimalistic, with drag-and-drop functionality to reorder tasks and prioritize them easily.</p>
                     <a href="#" class="btn" target="_blank">View Project</a>
